# receipts

./: .gitignore  .papercuts.jsonl  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.claude/skills/: rust-agent-cli  rust-engineer
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/dogfooding/: 2026-07-03-live-workflow-dogfood.md
docs/plans/: 2026-07-01-implementation-plan.md  2026-07-01-recon-cli-design.md
scripts/: preflight-release.sh
skills/receipts/: SKILL.md
src/: budget.rs  claim.rs  cli.rs  config.rs  envelope.rs  error.rs  lib.rs  main.rs  tiers.rs
src/commands/: ask.rs  capabilities.rs  doctor.rs  mod.rs  schema.rs
src/pipeline/: brief.rs  decompose.rs  extract.rs  mod.rs  shared.rs  verify.rs  worker.rs
src/providers/: cerebras.rs  exa.rs  mod.rs
tests/: cli.rs
tests/common/: mod.rs
