[package]
name = "recon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json", "rustls"] }
uuid = { version = "1.23.4", features = ["v4"] }
