[package]
name = "receipts"
version = "0.3.0"
edition = "2024"
description = "Source-verified research at function-call latency. Agent-first CLI: every claim comes back with a source URL, quote, and verdict."
license = "Apache-2.0"
repository = "https://github.com/treygoff24/receipts"
homepage = "https://github.com/treygoff24/receipts"
readme = "README.md"
keywords = ["research", "cli", "agent", "fact-checking", "search"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json", "rustls"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.1.1"

[profile.dist]
inherits = "release"
lto = "thin"
